made compatible for spaas